changes were made again

--- a/tests/Stability Analyses/stabilty.ipynb
+++ b/tests/Stability Analyses/stabilty.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 10 required positional arguments: 'wing_alpha0', 'wing_iw', 'tail_alpha0', 'cl_delta_e', 'wing_cm0_af', 'wing_twist', 'oswald_wing', 'oswald_tailplane', 'tail_AR', and 'aircraft_Cd0'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (629669106.py, line 35)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_25859/2710567296.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     58\u001b[0m \"\"\"\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m stab = Stability(\n\u001b[0m\u001b[1;32m     61\u001b[0m     \u001b[0maircraft_x_cg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0mwing_qc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 10 required positional arguments: 'wing_alpha0', 'wing_iw', 'tail_alpha0', 'cl_delta_e', 'wing_cm0_af', 'wing_twist', 'oswald_wing', 'oswald_tailplane', 'tail_AR', and 'aircraft_Cd0'"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_25859/629669106.py\"\u001b[0;36m, line \u001b[0;32m35\u001b[0m\n\u001b[0;31m    oswald_wing =\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -48,12 +45,19 @@
     "wing_alpha0 = -1.8 * u.deg\n",
     "wing_iw = 2 * u.deg\n",
     "tail_alpha0 = 0 * u.deg\n",
+    "wing_twist = -3 * u.deg\n",
+    "x_aerocenter_tail = 13.5 * u.m\n",
     "\n",
+    "# Are these the same, are they different? Who knows ....this is the question \n",
+    "CM0_w = -0.0445 \n",
+    "wing_cm0_af = -0.0445\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
-    "'wing_alpha0', 'wing_iw', 'tail_alpha0', 'cl_delta_e', 'wing_cm0_af', 'wing_twist', 'oswald_wing', 'oswald_tailplane', 'tail_AR', and 'aircraft_Cd0'\n",
-    "\"\"\"\n",
+    "# TODO: doing cruise right now, should do all the flight segments  \n",
+    "oswald_wing = 0.8\n",
+    "oswald_tailplane = 0.82 \n",
+    "tail_AR = 3\n",
+    "aircraft_Cd0 = 0.02674\n",
+    "cl_delta_e = \n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -90,7 +94,7 @@
     "stab = Stability(\n",
     "    aircraft_x_cg,\n",
     "    wing_qc,\n",
-    "    x_ac_h,\n",
+    "    x_aerocenter_tail,\n",
     "    l_h,\n",
     "    h_h,\n",
     "    wing_AR,\n",
@@ -105,7 +109,17 @@
     "    eta_h,\n",
     "    S_h,\n",
     "    CL_alpha_h,\n",
-    "    compressibility_correction\n",
+    "    compressibility_correction,\n",
+    "    wing_alpha0,\n",
+    "    wing_iw,\n",
+    "    tail_alpha0,\n",
+    "    cl_delta_e,\n",
+    "    wing_cm0_af, # CM0_af is the incompressible airfoil zero lift pitching moment\n",
+    "    wing_twist,\n",
+    "    oswald_wing,\n",
+    "    oswald_tailplane,\n",
+    "    tail_AR,\n",
+    "    aircraft_Cd0\n",
     ")\n",
     "\n",
     "# ac_stall_speed_takeoff = \n",
