--- a/tests/Stability Analyses/stabilty.ipynb
+++ b/tests/Stability Analyses/stabilty.ipynb
@@ -2,16 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (629669106.py, line 35)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_25859/629669106.py\"\u001b[0;36m, line \u001b[0;32m35\u001b[0m\n\u001b[0;31m    oswald_wing =\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K_f: 1.6\n",
+      "CM_f = 2.1460506706408347 dimensionless, Lift_term = -0.28401311475409863 / radian, Tailplane term = -2.3884056803123035 / radian\n",
+      "Power-off SM: 7.407851102253704 dimensionless\n",
+      "Power-on SM: 8.407851102253703 dimensionless\n",
+      "x_np: 6.455563675171243 meter\n",
+      "depsilon_dalpha: 0.4463940772023965 dimensionless\n",
+      "dCM_dalpha: -0.5263681244255674 / radian\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n        ac_stall_speed_takeoff,\\n        ac_stall_speed_landing,\\n        aircraft_Cd0,\\n        aircraft_Cl_ground,\\n        aircraft_CL_landing,\\n        aicraft_Cl_max_clean,\\n        Cl_climb,\\n        wing_AR,\\n        wing_oswald,\\n        aircraft_W0_S,\\n        aircraft_W_S_landing,\\n        aircraft_ground_AoA,\\n        aircraft_takeoff_AoA,\\n        h_obs_takeoff,\\n        h_obs_landing,\\n        engine_BPR,\\n        n_engines,\\n        aircraft_W0,\\n        aircarft_Wlanding,\\n        aircraft_LoverD_takeoff,\\n        ac_reverse_thrust,\\n        ac_wheel_braking,\\n        T_max,\\n        static_T_takeoff,\\n        dragOEI_evaluated_at_Vcl,\\n        aircraft_T0_W0,\\n        takeoff_density \\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -21,6 +36,20 @@
     "\n",
     "from Stability import *\n",
     "from Performance import *\n",
+    "\n",
+    "# TODO: place in each state also the aerodynamic terms that change with flight segment (i.e. cd0)\n",
+    "state = [\n",
+    "   {\"U\": ,\"CD0\": ,\"rho\": 1.225, \"T\": , \"Mass\": }, # takeoff\n",
+    "#   {\"U\": , \"rho\": 0.653, \"T\": , \"Mass\": }, # climb (density average of takeoff and cruise)\n",
+    "   {\"U\": 257.25 ,\"CD0\": ,\"rho\": 0.311, \"T\": , \"Mass\": }, # cruise (speed: M.75, alt: 40000ft)\n",
+    "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
+    "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # climb\n",
+    "   {\"U\": 171.5 ,\"CD0\": ,\"rho\": 0.525, \"T\": , \"Mass\": }, # 2nd cruise (speed: M.5, 26000ft)\n",
+    "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # loiter (min Drag speed)\n",
+    "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
+    "   {\"U\": ,\"CD0\": ,\"rho\": 1.225 , \"T\": , \"Mass\": } # landing\n",
+    "]\n",
+    "\n",
     "\n",
     "# TODO: THIS IS ONLY FOR CRUISE! do for landing + takeoff (prob just change x_cg and lift curve slopes)\n",
     "l_h = 6.8 * u.m\n",
@@ -47,6 +76,7 @@
     "tail_alpha0 = 0 * u.deg\n",
     "wing_twist = -3 * u.deg\n",
     "x_aerocenter_tail = 13.5 * u.m\n",
+    "elevator_deflection_conver_parameter = 0.2\n",
     "\n",
     "# Are these the same, are they different? Who knows ....this is the question \n",
     "CM0_w = -0.0445 \n",
@@ -57,7 +87,7 @@
     "oswald_tailplane = 0.82 \n",
     "tail_AR = 3\n",
     "aircraft_Cd0 = 0.02674\n",
-    "cl_delta_e = \n",
+    "cl_delta_e = 0.8 / (35 * u.deg).to(u.rad)  # 25 or 35 \n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -119,8 +149,14 @@
     "    oswald_wing,\n",
     "    oswald_tailplane,\n",
     "    tail_AR,\n",
-    "    aircraft_Cd0\n",
+    "    aircraft_Cd0,\n",
+    "    CM0_w,\n",
+    "    elevator_deflection_conver_parameter\n",
     ")\n",
+    "\n",
+    "stab.stability_analysis()\n",
+    "# after getting the mass from mission performance stab.trim_analysis(state)\n",
+    "\n",
     "\n",
     "# ac_stall_speed_takeoff = \n",
     "# ac_stall_speed_landing = \n",
@@ -172,7 +208,23 @@
     "# perf = Performance(\n",
     "\n",
     "# )\n",
-    "\n"
+    "\n",
+    "# Doing ground perf and updating states with takeoff and landing Velocity\n",
+    "state = perf.ground_performance(state)\n",
+    "\n",
+    "# Getting thrust for each segment\n",
+    "state = stab.calc_thrust(state)\n",
+    "\n",
+    "# Getting the mission profile \n",
+    "state = perf.mission_profile(state)\n",
+    "\n",
+    "# showing state with all values\n",
+    "print(state)\n",
+    "\n",
+    "# Getting the trim analysis results \n",
+    "stab.trim_analysis(state)\n",
+    "\n",
+    "perf.point_performance()"
    ]
   }
  ],
