--- a/tests/Stability Analyses/stabilty.ipynb
+++ b/tests/Stability Analyses/stabilty.ipynb
@@ -2,31 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "K_f: 1.6\n",
-      "CM_f = 2.1460506706408347 dimensionless, Lift_term = -0.28401311475409863 / radian, Tailplane term = -2.3884056803123035 / radian\n",
-      "Power-off SM: 7.407851102253704 dimensionless\n",
-      "Power-on SM: 8.407851102253703 dimensionless\n",
-      "x_np: 6.455563675171243 meter\n",
-      "depsilon_dalpha: 0.4463940772023965 dimensionless\n",
-      "dCM_dalpha: -0.5263681244255674 / radian\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (78371770.py, line 130)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_44977/78371770.py\"\u001b[0;36m, line \u001b[0;32m130\u001b[0m\n\u001b[0;31m    ac_stall_speed_takeoff =\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n        ac_stall_speed_takeoff,\\n        ac_stall_speed_landing,\\n        aircraft_Cd0,\\n        aircraft_Cl_ground,\\n        aircraft_CL_landing,\\n        aicraft_Cl_max_clean,\\n        Cl_climb,\\n        wing_AR,\\n        wing_oswald,\\n        aircraft_W0_S,\\n        aircraft_W_S_landing,\\n        aircraft_ground_AoA,\\n        aircraft_takeoff_AoA,\\n        h_obs_takeoff,\\n        h_obs_landing,\\n        engine_BPR,\\n        n_engines,\\n        aircraft_W0,\\n        aircarft_Wlanding,\\n        aircraft_LoverD_takeoff,\\n        ac_reverse_thrust,\\n        ac_wheel_braking,\\n        T_max,\\n        static_T_takeoff,\\n        dragOEI_evaluated_at_Vcl,\\n        aircraft_T0_W0,\\n        takeoff_density \\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -39,15 +24,15 @@
     "\n",
     "# TODO: place in each state also the aerodynamic terms that change with flight segment (i.e. cd0)\n",
     "state = [\n",
-    "   {\"U\": ,\"CD0\": ,\"rho\": 1.225, \"T\": , \"Mass\": }, # takeoff\n",
+    "   {\"U\": None,\"CD0\": 0.049777, \"rho\": 1.225, \"T\": None, \"Mass\": None}, # takeoff\n",
     "#   {\"U\": , \"rho\": 0.653, \"T\": , \"Mass\": }, # climb (density average of takeoff and cruise)\n",
-    "   {\"U\": 257.25 ,\"CD0\": ,\"rho\": 0.311, \"T\": , \"Mass\": }, # cruise (speed: M.75, alt: 40000ft)\n",
+    "   {\"U\": 221 ,\"CD0\": 0.02674,\"rho\": 0.311, \"T\": None, \"Mass\": None}, # cruise (speed: M.75, alt: 40000ft)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # climb\n",
-    "   {\"U\": 171.5 ,\"CD0\": ,\"rho\": 0.525, \"T\": , \"Mass\": }, # 2nd cruise (speed: M.5, 26000ft)\n",
+    "#   {\"U\": 171.5 ,\"CD0\": ,\"rho\": 0.525, \"T\": None, \"Mass\": None}, # 2nd cruise (speed: M.5, 26000ft)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # loiter (min Drag speed)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
-    "   {\"U\": ,\"CD0\": ,\"rho\": 1.225 , \"T\": , \"Mass\": } # landing\n",
+    "   {\"U\": None, \"CD0\": 0.097632, \"rho\": 1.225 , \"T\": None, \"Mass\": None} # landing\n",
     "]\n",
     "\n",
     "\n",
@@ -158,28 +143,41 @@
     "# after getting the mass from mission performance stab.trim_analysis(state)\n",
     "\n",
     "\n",
-    "# ac_stall_speed_takeoff = \n",
-    "# ac_stall_speed_landing = \n",
-    "# aircraft_Cd0_landing = \n",
-    "# aircraft_Cd0_takeoff = \n",
-    "# aircraft_Cl_ground = \n",
-    "# aircraft_Cl_landing = \n",
-    "# aircraft_Cl_max_clean = \n",
-    "# Cl_climb = \n",
-    "# wing_oswald = \n",
-    "# aircraft_W0_S =\n",
-    "# aircraft_W_S_landing = \n",
-    "# aircraft_ground_AoA = \n",
-    "# aircraft_takeoff_AoA = \n",
-    "# h_obs_takeoff = 10.668\n",
-    "# h_obs_landing = 10.668\n",
-    "# engine_BPR = \n",
-    "# n_engines = 2\n",
-    "\n",
+    "# THESE ARE VALUES ARE FOR CRUISE WHICH IS FINE FOR POINT PERFORMANCE (what about mission?)\n",
+    "ac_stall_speed_takeoff = \n",
+    "ac_stall_speed_landing = \n",
+    "aircraft_Cd0_landing = 0.097632\n",
+    "aircraft_Cd0_takeoff = 0.049777\n",
+    "aircraft_Cl_ground = \n",
+    "aircraft_Cl_landing = \n",
+    "aircraft_Cl_max_clean = \n",
+    "Cl_climb = \n",
+    "wing_oswald = 0.8\n",
+    "aircraft_W0_S =\n",
+    "aircraft_W_S_landing = \n",
+    "aircraft_ground_AoA = \n",
+    "aircraft_takeoff_AoA = \n",
+    "h_obs_takeoff = #10.668\n",
+    "h_obs_landing = #10.668\n",
+    "engine_BPR = \n",
+    "n_engines = 2\n",
+    "aircraft_CL_landing =\n",
+    "aicraft_Cl_max_clean = \n",
+    "aircraft_W0 = \n",
+    "aircarft_Wlanding =\n",
+    "aircraft_LoverD_takeoff =\n",
+    "ac_reverse_thrust = False\n",
+    "ac_wheel_braking = True\n",
+    "T_max =\n",
+    "static_T_takeoff =\n",
+    "dragOEI_evaluated_at_Vcl =\n",
+    "aircraft_T0_W0 = \n",
+    "takeoff_density = 1.225 (u.kg / u.m**3)\n",
     "\"\"\"\n",
-    "        ac_stall_speed_takeoff,\n",
+    " ac_stall_speed_takeoff,\n",
     "        ac_stall_speed_landing,\n",
-    "        aircraft_Cd0,\n",
+    "        aircraft_Cd0_landing,\n",
+    "        aircraft_Cd0_takeoff,\n",
     "        aircraft_Cl_ground,\n",
     "        aircraft_CL_landing,\n",
     "        aicraft_Cl_max_clean,\n",
@@ -203,11 +201,38 @@
     "        static_T_takeoff,\n",
     "        dragOEI_evaluated_at_Vcl,\n",
     "        aircraft_T0_W0,\n",
-    "        takeoff_density \n",
+    "        takeoff_density\n",
     "\"\"\"\n",
-    "# perf = Performance(\n",
-    "\n",
-    "# )\n",
+    "perf = Performance(\n",
+    "ac_stall_speed_takeoff,\n",
+    "ac_stall_speed_landing,\n",
+    "aircraft_Cd0_landing,\n",
+    "aircraft_Cd0_takeoff,\n",
+    "aircraft_Cl_ground,\n",
+    "aircraft_CL_landing,\n",
+    "aicraft_Cl_max_clean,\n",
+    "Cl_climb,\n",
+    "wing_AR,\n",
+    "wing_oswald,\n",
+    "aircraft_W0_S,\n",
+    "aircraft_W_S_landing,\n",
+    "aircraft_ground_AoA,\n",
+    "aircraft_takeoff_AoA,\n",
+    "h_obs_takeoff,\n",
+    "h_obs_landing,\n",
+    "engine_BPR,\n",
+    "n_engines,\n",
+    "aircraft_W0,\n",
+    "aircarft_Wlanding,\n",
+    "aircraft_LoverD_takeoff,\n",
+    "ac_reverse_thrust,\n",
+    "ac_wheel_braking,\n",
+    "T_max,\n",
+    "static_T_takeoff,\n",
+    "dragOEI_evaluated_at_Vcl,\n",
+    "aircraft_T0_W0,\n",
+    "takeoff_density\n",
+    ")\n",
     "\n",
     "# Doing ground perf and updating states with takeoff and landing Velocity\n",
     "state = perf.ground_performance(state)\n",
