--- a/tests/Stability Analyses/stabilty.ipynb
+++ b/tests/Stability Analyses/stabilty.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (78371770.py, line 130)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sympy'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_44977/78371770.py\"\u001b[0;36m, line \u001b[0;32m130\u001b[0m\n\u001b[0;31m    ac_stall_speed_takeoff =\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/46/8grpgwfd38d6tvkq0_nftjv00000gn/T/ipykernel_17373/1485555904.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msympy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msym\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgpkit\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mureg\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mStability\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sympy'"
      ]
     }
    ],
@@ -29,8 +32,8 @@
     "   {\"U\": 221 ,\"CD0\": 0.02674,\"rho\": 0.311, \"T\": None, \"Mass\": None}, # cruise (speed: M.75, alt: 40000ft)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # climb\n",
-    "#   {\"U\": 171.5 ,\"CD0\": ,\"rho\": 0.525, \"T\": None, \"Mass\": None}, # 2nd cruise (speed: M.5, 26000ft)\n",
-    "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # loiter (min Drag speed)\n",
+    "   {\"U\": 137.2 ,\"CD0\": 0.0276,\"rho\": 0.525, \"T\": None, \"Mass\": None}, # 2nd cruise (speed: M.4, 26000ft)\n",
+    "#   {\"U\": None, \"CD0\": None, \"rho\": None, \"T\": None, \"Mass\": None}, # loiter (min Drag speed)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
     "   {\"U\": None, \"CD0\": 0.097632, \"rho\": 1.225 , \"T\": None, \"Mass\": None} # landing\n",
     "]\n",
@@ -144,65 +147,35 @@
     "\n",
     "\n",
     "# THESE ARE VALUES ARE FOR CRUISE WHICH IS FINE FOR POINT PERFORMANCE (what about mission?)\n",
-    "ac_stall_speed_takeoff = \n",
-    "ac_stall_speed_landing = \n",
+    "aircraft_W0 = 5064 * u.kg\n",
+    "aircarft_Wlanding = 0.95 * aircraft_W0 # worst case scenario\n",
     "aircraft_Cd0_landing = 0.097632\n",
     "aircraft_Cd0_takeoff = 0.049777\n",
-    "aircraft_Cl_ground = \n",
-    "aircraft_Cl_landing = \n",
-    "aircraft_Cl_max_clean = \n",
-    "Cl_climb = \n",
-    "wing_oswald = 0.8\n",
-    "aircraft_W0_S =\n",
-    "aircraft_W_S_landing = \n",
-    "aircraft_ground_AoA = \n",
-    "aircraft_takeoff_AoA = \n",
-    "h_obs_takeoff = #10.668\n",
-    "h_obs_landing = #10.668\n",
-    "engine_BPR = \n",
+    "aircraft_Cl_ground = 2.087\n",
+    "aircraft_Cl_landing = 2.44\n",
+    "aircraft_Cl_max_clean = 1.26\n",
+    "Cl_climb = 1.26 # same as cruise currently, only used for BFL \n",
+    "wing_oswald = 0.8 # for cruise config \n",
+    "aircraft_W0_S = 2227 * (u.n / u.m**2)\n",
+    "aircraft_W_S_landing = aircraft_W0_S * (aircraft_Wlanding/aicraft_W0) # is this legal?\n",
+    "aircraft_ground_AoA = 0.0 # initial angle to rotate --> 0\n",
+    "aircraft_takeoff_AoA = (13 * u.deg).to(u.rad) # angle we climb at with flaps \n",
+    "h_obs_takeoff = (35 * u.ft).to(u.meter)\n",
+    "h_obs_landing = (35 * u.ft).to(u.meter)\n",
+    "engine_BPR = 2.8\n",
     "n_engines = 2\n",
-    "aircraft_CL_landing =\n",
-    "aicraft_Cl_max_clean = \n",
-    "aircraft_W0 = \n",
-    "aircarft_Wlanding =\n",
-    "aircraft_LoverD_takeoff =\n",
+    "aircraft_LoverD_takeoff = 18.5;\n",
     "ac_reverse_thrust = False\n",
     "ac_wheel_braking = True\n",
-    "T_max =\n",
-    "static_T_takeoff =\n",
-    "dragOEI_evaluated_at_Vcl =\n",
-    "aircraft_T0_W0 = \n",
-    "takeoff_density = 1.225 (u.kg / u.m**3)\n",
-    "\"\"\"\n",
-    " ac_stall_speed_takeoff,\n",
-    "        ac_stall_speed_landing,\n",
-    "        aircraft_Cd0_landing,\n",
-    "        aircraft_Cd0_takeoff,\n",
-    "        aircraft_Cl_ground,\n",
-    "        aircraft_CL_landing,\n",
-    "        aicraft_Cl_max_clean,\n",
-    "        Cl_climb,\n",
-    "        wing_AR,\n",
-    "        wing_oswald,\n",
-    "        aircraft_W0_S,\n",
-    "        aircraft_W_S_landing,\n",
-    "        aircraft_ground_AoA,\n",
-    "        aircraft_takeoff_AoA,\n",
-    "        h_obs_takeoff,\n",
-    "        h_obs_landing,\n",
-    "        engine_BPR,\n",
-    "        n_engines,\n",
-    "        aircraft_W0,\n",
-    "        aircarft_Wlanding,\n",
-    "        aircraft_LoverD_takeoff,\n",
-    "        ac_reverse_thrust,\n",
-    "        ac_wheel_braking,\n",
-    "        T_max,\n",
-    "        static_T_takeoff,\n",
-    "        dragOEI_evaluated_at_Vcl,\n",
-    "        aircraft_T0_W0,\n",
-    "        takeoff_density\n",
-    "\"\"\"\n",
+    "T_max = 16239\n",
+    "static_T_takeoff = 14823\n",
+    "ac_stall_speed_takeoff = (2*aircraft_W0)/(wing_S*1.225*aircraft_Cl_ground)\n",
+    "ac_stall_speed_landing = (2*aircraft_Wlanding)/(wing_S*1.225*aircraft_Cl_landing)\n",
+    "dragOEI_evaluated_at_Vcl = 0.5 * state[0][\"rho\"] * wing_S * aircraft_Cd0_takeoff * (1.2 * ac_stall_speed_takeoff) ** 2 \n",
+    "aircraft_T0_W0 = 0.28\n",
+    "takeoff_density = 1.225\n",
+    "#takeoff_density = 1.225 (u.kg / u.m**3)\n",
+    "\n",
     "perf = Performance(\n",
     "ac_stall_speed_takeoff,\n",
     "ac_stall_speed_landing,\n",
@@ -231,7 +204,8 @@
     "static_T_takeoff,\n",
     "dragOEI_evaluated_at_Vcl,\n",
     "aircraft_T0_W0,\n",
-    "takeoff_density\n",
+    "takeoff_density,\n",
+    "wing_S\n",
     ")\n",
     "\n",
     "# Doing ground perf and updating states with takeoff and landing Velocity\n",
