fighting with units

--- a/tests/Stability Analyses/stabilty.ipynb
+++ b/tests/Stability Analyses/stabilty.ipynb
@@ -6,14 +6,29 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sympy'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K_f: 1.6\n",
+      "CM_f = 2.1460506706408347 dimensionless, Lift_term = -0.28401311475409863 / radian, Tailplane term = -2.3884056803123035 / radian\n",
+      "Power-off SM: 7.407851102253704 dimensionless\n",
+      "Power-on SM: 8.407851102253703 dimensionless\n",
+      "x_np: 6.455563675171243 meter\n",
+      "depsilon_dalpha: 0.4463940772023965 dimensionless\n",
+      "dCM_dalpha: -0.5263681244255674 / radian\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute 'magnitude'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/46/8grpgwfd38d6tvkq0_nftjv00000gn/T/ipykernel_17373/1485555904.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msympy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msym\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgpkit\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mureg\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mStability\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sympy'"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_75823/3586249958.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m \u001b[0;31m# Doing ground perf and updating states with takeoff and landing Velocity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mground_performance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m \u001b[0;31m# Getting thrust for each segment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/avd/tests/Stability Analyses/Performance.py\u001b[0m in \u001b[0;36mground_performance\u001b[0;34m(self, state)\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_tr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_cl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_Str_Scl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_Sb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_fr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_Sfr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_f\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_Sf_hf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/avd/tests/Stability Analyses/Performance.py\u001b[0m in \u001b[0;36mget_Sb\u001b[0;34m(self, state)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m         \u001b[0mK_A\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"rho\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2.0\u001b[0m  \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maircraft_W_S_landing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmu\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maircraft_Cl_landing\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maircraft_CD0_landing\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maircraft_Cl_landing\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwing_AR\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwing_oswald\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagnitude\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m         \u001b[0mK_T\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mT_breaking\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maircraft_Wlanding\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagnitude\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'magnitude'"
      ]
     }
    ],
@@ -27,15 +42,15 @@
     "\n",
     "# TODO: place in each state also the aerodynamic terms that change with flight segment (i.e. cd0)\n",
     "state = [\n",
-    "   {\"U\": None,\"CD0\": 0.049777, \"rho\": 1.225, \"T\": None, \"Mass\": None}, # takeoff\n",
+    "   {\"U\": None,\"CD0\": 0.049777, \"rho\": 1.225 * u.kg / u.m**3, \"T\": None, \"Mass\": None}, # takeoff\n",
     "#   {\"U\": , \"rho\": 0.653, \"T\": , \"Mass\": }, # climb (density average of takeoff and cruise)\n",
-    "   {\"U\": 221 ,\"CD0\": 0.02674,\"rho\": 0.311, \"T\": None, \"Mass\": None}, # cruise (speed: M.75, alt: 40000ft)\n",
+    "   {\"U\": 221 ,\"CD0\": 0.02674,\"rho\": 0.311 * u.kg / u.m**3, \"T\": None, \"Mass\": None}, # cruise (speed: M.75, alt: 40000ft)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # climb\n",
-    "   {\"U\": 137.2 ,\"CD0\": 0.0276,\"rho\": 0.525, \"T\": None, \"Mass\": None}, # 2nd cruise (speed: M.4, 26000ft)\n",
+    "   {\"U\": 137.2 ,\"CD0\": 0.0276,\"rho\": 0.525 * u.kg / u.m**3, \"T\": None, \"Mass\": None}, # 2nd cruise (speed: M.4, 26000ft)\n",
     "#   {\"U\": None, \"CD0\": None, \"rho\": None, \"T\": None, \"Mass\": None}, # loiter (min Drag speed)\n",
     "#   {\"U\": , \"rho\": , \"T\": , \"Mass\": }, # descent\n",
-    "   {\"U\": None, \"CD0\": 0.097632, \"rho\": 1.225 , \"T\": None, \"Mass\": None} # landing\n",
+    "   {\"U\": None, \"CD0\": 0.097632, \"rho\": 1.225  * u.kg / u.m**3, \"T\": None, \"Mass\": None} # landing\n",
     "]\n",
     "\n",
     "\n",
@@ -147,8 +162,8 @@
     "\n",
     "\n",
     "# THESE ARE VALUES ARE FOR CRUISE WHICH IS FINE FOR POINT PERFORMANCE (what about mission?)\n",
-    "aircraft_W0 = 5064 * u.kg\n",
-    "aircarft_Wlanding = 0.95 * aircraft_W0 # worst case scenario\n",
+    "aircraft_W0 = 5064 \n",
+    "aircraft_Wlanding = 0.95 * aircraft_W0 # worst case scenario\n",
     "aircraft_Cd0_landing = 0.097632\n",
     "aircraft_Cd0_takeoff = 0.049777\n",
     "aircraft_Cl_ground = 2.087\n",
@@ -156,12 +171,12 @@
     "aircraft_Cl_max_clean = 1.26\n",
     "Cl_climb = 1.26 # same as cruise currently, only used for BFL \n",
     "wing_oswald = 0.8 # for cruise config \n",
-    "aircraft_W0_S = 2227 * (u.n / u.m**2)\n",
-    "aircraft_W_S_landing = aircraft_W0_S * (aircraft_Wlanding/aicraft_W0) # is this legal?\n",
-    "aircraft_ground_AoA = 0.0 # initial angle to rotate --> 0\n",
+    "aircraft_W0_S = 2227 * u.kg / (u.m * u.sec**2) #* (u.Newton / u.m**2)\n",
+    "aircraft_W_S_landing = aircraft_W0_S * (aircraft_Wlanding/aircraft_W0) # is this legal?\n",
+    "aircraft_ground_AoA = 0.0 * u.rad# initial angle to rotate --> 0\n",
     "aircraft_takeoff_AoA = (13 * u.deg).to(u.rad) # angle we climb at with flaps \n",
-    "h_obs_takeoff = (35 * u.ft).to(u.meter)\n",
-    "h_obs_landing = (35 * u.ft).to(u.meter)\n",
+    "h_obs_takeoff = (35 * u.ft).to(u.meter).magnitude\n",
+    "h_obs_landing = (35 * u.ft).to(u.meter).magnitude\n",
     "engine_BPR = 2.8\n",
     "n_engines = 2\n",
     "aircraft_LoverD_takeoff = 18.5;\n",
@@ -169,8 +184,8 @@
     "ac_wheel_braking = True\n",
     "T_max = 16239\n",
     "static_T_takeoff = 14823\n",
-    "ac_stall_speed_takeoff = (2*aircraft_W0)/(wing_S*1.225*aircraft_Cl_ground)\n",
-    "ac_stall_speed_landing = (2*aircraft_Wlanding)/(wing_S*1.225*aircraft_Cl_landing)\n",
+    "ac_stall_speed_takeoff = np.sqrt((2*aircraft_W0)/(wing_S*state[0][\"rho\"]*aircraft_Cl_ground))\n",
+    "ac_stall_speed_landing = np.sqrt((2*aircraft_Wlanding)/(wing_S*state[0][\"rho\"]*aircraft_Cl_landing))\n",
     "dragOEI_evaluated_at_Vcl = 0.5 * state[0][\"rho\"] * wing_S * aircraft_Cd0_takeoff * (1.2 * ac_stall_speed_takeoff) ** 2 \n",
     "aircraft_T0_W0 = 0.28\n",
     "takeoff_density = 1.225\n",
@@ -182,8 +197,8 @@
     "aircraft_Cd0_landing,\n",
     "aircraft_Cd0_takeoff,\n",
     "aircraft_Cl_ground,\n",
-    "aircraft_CL_landing,\n",
-    "aicraft_Cl_max_clean,\n",
+    "aircraft_Cl_landing,\n",
+    "aircraft_Cl_max_clean,\n",
     "Cl_climb,\n",
     "wing_AR,\n",
     "wing_oswald,\n",
@@ -196,7 +211,7 @@
     "engine_BPR,\n",
     "n_engines,\n",
     "aircraft_W0,\n",
-    "aircarft_Wlanding,\n",
+    "aircraft_Wlanding,\n",
     "aircraft_LoverD_takeoff,\n",
     "ac_reverse_thrust,\n",
     "ac_wheel_braking,\n",
@@ -246,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
